force-app/main/default/objects/TriggerHandlerSetting__mdt/TriggerHandlerSetting__mdt.object-meta.xml
<CustomObject>
    <description>Handler for each individual trigger handler (piece of business logic)</description>
    <label>Trigger Handler Setting</label>
    <pluralLabel>Trigger Handler Settings</pluralLabel>
</CustomObject>