force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>The name of the handler class that this configuration represents</description>
    <inlineHelpText>The name of the handler class that this configuration represents</inlineHelpText>
    <label>Class Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>