force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the trigger handler is active</description>
    <inlineHelpText>Whether or not the trigger handler is active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>