force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/SObjectTriggerSetting__c.field-meta.xml
<CustomField>
    <fullName>SObjectTriggerSetting__c</fullName>
    <description>The parent SObject setting</description>
    <inlineHelpText>The parent SObject setting</inlineHelpText>
    <label>SObject Trigger Setting</label>
    <referenceTo>SObjectTriggerSetting__mdt</referenceTo>
    <relationshipLabel>Trigger Handler Settings</relationshipLabel>
    <relationshipName>TriggerHandlerSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>